Fix image overflowing the body in small screens

--- a/app/posts/[id]/PostViewer.module.css
+++ b/app/posts/[id]/PostViewer.module.css
@@ -14,7 +14,8 @@
 
 .Image {
   display: block;
-  margin: 0 auto;
+  margin: 14px auto 0;
+  max-width: 100%;
 }
 
 .Caption {
